# todoapp

./: .coverage  .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v1.1.0.md  codecov.yml  console_app.py  coverage.xml  gui.py  main.py  pyproject.toml  storage.py  tasks.json  tasks.py  test_integration.py  test_storage.py  tkinter_test.py  ui.py
.github/workflows/: ci.yml
src/: console_app.py  gui.py  main.py  models.py  storage.py
src/todoapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_console_app.py  test_gui.py  test_integration.py  test_main.py  test_models.py  test_storage.py  tkinter_test.py
